--- a/CSS/css.scss
+++ b/CSS/css.scss
@@ -2,25 +2,31 @@
     border-radius: 100px;
     width: 30px;
 }
+$for_filter: blur(5px);
+%for_content{
+    background-color: rgba(240, 240, 240, 0.863);
+    border-radius: 15px;
+    margin-top: 0;
+    padding-top: 0; 
+    position: relative;
+}
 @media only screen and (max-width:991px ){
-    #Software{
-        display: none;
+    nav{
+        #Software{
+            display: none;
+        }
     }
     #iconimg{
         display: none;
     }
     #content{
-        background-color: rgba(240, 240, 240, 0.863);
-        border-radius: 15px;
-        margin-top: 0;
-        padding-top: 0;
-        position: relative;
+        @extend %for_content;
         top: -8em;
     }
     #coverDiv{
         height:15em;
         background-size: cover;
-        filter: blur(5px);
+        filter:$for_filter;
     }
 }
 @media only screen and (min-width:992px){
@@ -28,18 +34,14 @@
         display: none;
     }
     #content{
-        margin-top: 0;
-        padding-top: 0;
+        @extend %for_content;
         margin-left: 15%;
         margin-right: 15%;
-        background-color: rgba(240, 240, 240, 0.863);
-        border-radius: 15px;
-        position: relative;
         top:-12em;
     }
     #coverDiv{
         height:20em;
         background-size: cover;
-        filter: blur(5px);
+        filter: $for_filter;
     }
 }
